--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -22,6 +22,11 @@
   .header__right {
     margin-right: 0;
     text-align: right;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    white-space: nowrap;
     .header__item {
       padding-right: 12px;
       display: inline-flex;
